Fix user icon spacing in Arabic mode

--- a/src/index.css
+++ b/src/index.css
@@ -18,26 +18,8 @@
   direction: rtl;
 }
 
-.rtl .space-x-2 > * + * {
+/* RTL spacing utilities */
+.rtl .space-x-reverse > * + * {
   margin-left: 0;
-  margin-right: 0.5rem;
-}
-
-.rtl .space-x-4 > * + * {
-  margin-left: 0;
-  margin-right: 1rem;
-}
-
-/* Fix for RTL spacing in flex containers */
-.rtl .flex.items-center.space-x-2 > * + *,
-.rtl .flex.items-center.space-x-4 > * + * {
-  margin-left: 0;
-}
-
-.rtl .flex.items-center.space-x-2 > * + * {
-  margin-right: 0.5rem;
-}
-
-.rtl .flex.items-center.space-x-4 > * + * {
-  margin-right: 1rem;
+  margin-right: 0.75rem;
 }
